--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ ADD_KPROBES_CONFIG=false
 KSU_HOOKS_PATCH=false
 ADD_OVERLAYFS_CONFIG=false
 ADD_APATCH_SUPPORT=false
-FIX_APATCH_OPENELA=true
+FIX_APATCH_OPENELA=false
 OLD_ANDROID_SUPPORT=false
 
 # Custom compiler
