--- a/config.env
+++ b/config.env
@@ -8,6 +8,7 @@ KERNEL_ARCH=arm64
 
 # Kernel configuration
 ENABLE_KERNELSU=true
+KERNELSU_SETUP_SOURCE=https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
 KERNELSU_TAG=v1.0.1
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
