--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -56,6 +56,7 @@ jobs:
         mkdir clang
         wget -nv https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/${{ env.CLANG_BRANCH }}/clang-${{ env.CLANG_VERSION }}.tar.gz
         tar -C clang/ -zxvf clang-${{ env.CLANG_VERSION }}.tar.gz
+        rm clang-${{ env.CLANG_VERSION }}.tar.gz
 
     - name: Download Custom Clang
       if: env.USE_CUSTOM_CLANG == 'true' && env.USE_CUSTOM_GCC != 'true' && env.ENABLE_GCC_AOSP != 'true'
@@ -65,14 +66,17 @@ jobs:
             wget -nv -O clang.tar.gz ${{ env.CUSTOM_CLANG_SOURCE }}
             mkdir clang
             tar -C clang/ -zxvf clang.tar.gz
+            rm clang.tar.gz
         elif [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.tar.xz' ]]; then
             wget -nv -O clang.tar.xz ${{ env.CUSTOM_CLANG_SOURCE }}
             mkdir clang
             tar -C clang/ -Jxvf clang.tar.xz
+            rm clang.tar.xz
         elif [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.tar.zst' ]]; then
             wget -nv -O clang.tar.zst ${{ env.CUSTOM_CLANG_SOURCE }}
             mkdir clang
             tar -C clang/ -I zstd -xf clang.tar.zst
+            rm clang.tar.zst
         elif [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.git' ]]; then
             git clone ${{ env.CUSTOM_CLANG_SOURCE }} -b ${{ env.CUSTOM_CLANG_BRANCH }} clang --depth=1
         else
@@ -92,6 +96,7 @@ jobs:
             mkdir gcc-64
             wget -nv -O gcc-aarch64.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
             tar -C gcc-64/ -zxvf gcc-aarch64.tar.gz
+            rm gcc-aarch64.tar.gz
             echo "GCC_64=CROSS_COMPILE=$GITHUB_WORKSPACE/kernel_workspace/gcc-64/bin/aarch64-linux-android-" >> $GITHUB_ENV
         fi
 
@@ -99,6 +104,7 @@ jobs:
             mkdir gcc-32
             wget -nv -O gcc-arm.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
             tar -C gcc-32/ -zxvf gcc-arm.tar.gz
+            rm gcc-arm.tar.gz
             echo "GCC_32=CROSS_COMPILE_ARM32=$GITHUB_WORKSPACE/kernel_workspace/gcc-32/bin/arm-linux-androideabi-" >> $GITHUB_ENV
         fi
 
@@ -111,20 +117,24 @@ jobs:
                 wget -nv -O gcc-64.tar.gz ${{ env.CUSTOM_GCC_64_SOURCE }}
                 mkdir gcc-64
                 tar -C gcc-64/ -zxvf gcc-64.tar.gz
+                rm gcc-64.tar.gz
             elif [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.tar.xz' ]]; then
                 wget -nv -O gcc-64.xz ${{ env.CUSTOM_GCC_64_SOURCE }}
                 mkdir gcc-64
                 tar -C gcc-64/ -Jxvf gcc-64.xz
+                rm gcc-64.tar.xz
             elif [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.tar.zst' ]]; then
                 wget -nv -O gcc-64.tar.zst ${{ env.CUSTOM_GCC_64_SOURCE }}
                 mkdir gcc-64
                 tar -C gcc-64/ -I zstd -xf gcc-64.tar.zst
+                rm gcc-64.tar.zst
             elif [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.git' ]]; then
                 git clone ${{ env.CUSTOM_GCC_64_SOURCE }} -b ${{ env.CUSTOM_GCC_64_BRANCH }} gcc-64 --depth=1
             else
                 wget -nv -O gcc-64.zip ${{ env.CUSTOM_GCC_64_SOURCE }}
                 mkdir gcc-64
                 unzip gcc-64.zip -d gcc-64/
+                rm gcc-64.zip
             fi
             if [[ "$(find ./gcc-64 -mindepth 1 -maxdepth 1 -type d | wc -l)" == "1" ]]; then
                 mv -f "$(find ./gcc-64 -mindepth 1 -maxdepth 1 -type d)"/* ./gcc-64
@@ -135,20 +145,24 @@ jobs:
                 wget -nv -O gcc-32.tar.gz ${{ env.CUSTOM_GCC_32_SOURCE }}
                 mkdir gcc-32
                 tar -C gcc-32/ -zxvf gcc-32.tar.gz
+                rm gcc-32.tar.gz
             elif [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.tar.xz' ]]; then
                 wget -nv -O gcc-32.xz ${{ env.CUSTOM_GCC_32_SOURCE }}
                 mkdir gcc-32
                 tar -C gcc-32/ -Jxvf gcc-32.xz
+                rm gcc-32.tar.xz
             elif [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.tar.zst' ]]; then
                 wget -nv -O gcc-32.tar.zst ${{ env.CUSTOM_GCC_32_SOURCE }}
                 mkdir gcc-32
                 tar -C gcc-32/ -I zstd -xf gcc-32.tar.zst
+                rm gcc-32.tar.zst
             elif [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.git' ]]; then
                 git clone ${{ env.CUSTOM_GCC_32_SOURCE }} -b ${{ env.CUSTOM_GCC_32_BRANCH }} gcc-32 --depth=1
             else
                 wget -nv -O gcc-32.zip ${{ env.CUSTOM_GCC_32_SOURCE }}
                 mkdir gcc-32
                 unzip gcc-32.zip -d gcc-32/
+                rm gcc-32.zip
             fi
             if [[ "$(find ./gcc-32 -mindepth 1 -maxdepth 1 -type d | wc -l)" == "1" ]]; then
                 mv -f "$(find ./gcc-32 -mindepth 1 -maxdepth 1 -type d)"/* ./gcc-32
@@ -347,20 +361,24 @@ jobs:
             wget -nv -O AnyKernel3.tar.gz ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             tar -C AnyKernel3/ -zxvf AnyKernel3.tar.gz
+            rm AnyKernel3.tar.gz
         elif [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.tar.xz' ]]; then
             wget -nv -O AnyKernel3.tar.xz ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             tar -C AnyKernel3/ -Jxvf AnyKernel3.tar.xz
+            rm AnyKernel3.tar.xz
         elif [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.tar.zst' ]]; then
             wget -nv -O AnyKernel3.tar.zst ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             tar -C AnyKernel3/ -I zstd -xf clang.tar.zst
+            rm AnyKernel3.tar.zst
         elif [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.git' ]]; then
             git clone ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} -b ${{ env.CUSTOM_ANYKERNEL3_BRANCH }} --depth=1 AnyKernel3
         else
             wget -nv -O AnyKernel3.zip ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             unzip AnyKernel3.zip -d AnyKernel3/
+            rm AnyKernel3.zip
         fi
         cp android-kernel/out/arch/${{ env.KERNEL_ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }} AnyKernel3/
         if [ ${{ env.CHECK_DTBO_IS_OK }} = true ]; then
