--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -33,7 +33,7 @@ jobs:
         remove-haskell: 'true'
         remove-codeql: 'true'
 
-    - name: Prepare Environment
+    - name: Prepare environment
       run: |
         grep -v -E "^#|^\n" config.env | sed 's/ #.*//; s/#.*//' >> $GITHUB_ENV
 
@@ -66,38 +66,29 @@ jobs:
         sudo ln -s /usr/bin/python2.7 /usr/local/bin/python2
         rm -rf ~/python2-jammy
 
-    - name: Download AOSP Clang
-      if: env.USE_CUSTOM_CLANG != 'true' && env.USE_CUSTOM_GCC != 'true' && env.ENABLE_GCC_AOSP != 'true'
+    - name: Download Clang
+      if: env.USE_CLANG == 'true' && env.USE_GCC != 'true'
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        mkdir clang
-        wget -nv https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/${{ env.CLANG_BRANCH }}/clang-${{ env.CLANG_VERSION }}.tar.gz
-        tar -C clang/ -zxvf clang-${{ env.CLANG_VERSION }}.tar.gz
-        rm clang-${{ env.CLANG_VERSION }}.tar.gz
-
-    - name: Download Custom Clang
-      if: env.USE_CUSTOM_CLANG == 'true' && env.USE_CUSTOM_GCC != 'true' && env.ENABLE_GCC_AOSP != 'true'
-      run: |
-        cd $GITHUB_WORKSPACE/kernel_workspace
-        if [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.tar.gz' ]]; then
-            wget -nv -O clang.tar.gz ${{ env.CUSTOM_CLANG_SOURCE }}
+        if [[ ${{ env.CLANG_SOURCE }} == *'.tar.gz' ]]; then
+            wget -nv -O clang.tar.gz ${{ env.CLANG_SOURCE }}
             mkdir clang
             tar -C clang/ -zxvf clang.tar.gz
             rm clang.tar.gz
-        elif [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.tar.xz' ]]; then
-            wget -nv -O clang.tar.xz ${{ env.CUSTOM_CLANG_SOURCE }}
+        elif [[ ${{ env.CLANG_SOURCE }} == *'.tar.xz' ]]; then
+            wget -nv -O clang.tar.xz ${{ env.CLANG_SOURCE }}
             mkdir clang
             tar -C clang/ -Jxvf clang.tar.xz
             rm clang.tar.xz
-        elif [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.tar.zst' ]]; then
-            wget -nv -O clang.tar.zst ${{ env.CUSTOM_CLANG_SOURCE }}
+        elif [[ ${{ env.CLANG_SOURCE }} == *'.tar.zst' ]]; then
+            wget -nv -O clang.tar.zst ${{ env.CLANG_SOURCE }}
             mkdir clang
             tar -C clang/ -I zstd -xf clang.tar.zst
             rm clang.tar.zst
-        elif [[ ${{ env.CUSTOM_CLANG_SOURCE }} == *'.git' ]]; then
-            git clone ${{ env.CUSTOM_CLANG_SOURCE }} -b ${{ env.CUSTOM_CLANG_BRANCH }} clang --depth=1
+        elif [[ ${{ env.CLANG_SOURCE }} == *'.git' ]]; then
+            git clone ${{ env.CLANG_SOURCE }} -b ${{ env.CLANG_BRANCH }} clang --depth=1
         else
-            wget -nv -O clang.zip ${{ env.CUSTOM_CLANG_SOURCE }}
+            wget -nv -O clang.zip ${{ env.CLANG_SOURCE }}
             mkdir clang
             unzip clang.zip -d clang/
         fi
@@ -105,50 +96,30 @@ jobs:
             mv -f "$(find ./clang -mindepth 1 -maxdepth 1 -type d)"/* ./clang
         fi
 
-    - name: Download GCC AOSP
-      if: env.ENABLE_GCC_AOSP == 'true' && env.USE_CUSTOM_GCC != 'true' && env.USE_CUSTOM_CLANG != 'true'
+    - name: Download GCC
+      if: env.USE_GCC == 'true' && env.USE_CLANG != 'true'
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        if [ ${{ env.ENABLE_GCC_ARM64 }} = true ]; then
-            mkdir gcc-64
-            wget -nv -O gcc-aarch64.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
-            tar -C gcc-64/ -zxvf gcc-aarch64.tar.gz
-            rm gcc-aarch64.tar.gz
-            echo "GCC_64=CROSS_COMPILE=$GITHUB_WORKSPACE/kernel_workspace/gcc-64/bin/aarch64-linux-android-" >> $GITHUB_ENV
-        fi
-
-        if [ ${{ env.ENABLE_GCC_ARM32 }} = true ]; then
-            mkdir gcc-32
-            wget -nv -O gcc-arm.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
-            tar -C gcc-32/ -zxvf gcc-arm.tar.gz
-            rm gcc-arm.tar.gz
-            echo "GCC_32=CROSS_COMPILE_ARM32=$GITHUB_WORKSPACE/kernel_workspace/gcc-32/bin/arm-linux-androideabi-" >> $GITHUB_ENV
-        fi
-
-    - name: Download Custom GCC
-      if: env.USE_CUSTOM_GCC == 'true' && env.ENABLE_GCC_AOSP != 'true' && env.USE_CUSTOM_CLANG != 'true'
-      run: |
-        cd $GITHUB_WORKSPACE/kernel_workspace
-        if [ ${{ env.USE_CUSTOM_GCC_64 }} = true ]; then
-            if [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.tar.gz' ]]; then
-                wget -nv -O gcc-64.tar.gz ${{ env.CUSTOM_GCC_64_SOURCE }}
+        if [ ${{ env.USE_GCC_64 }} = true ]; then
+            if [[ ${{ env.GCC_64_SOURCE }} == *'.tar.gz' ]]; then
+                wget -nv -O gcc-64.tar.gz ${{ env.GCC_64_SOURCE }}
                 mkdir gcc-64
                 tar -C gcc-64/ -zxvf gcc-64.tar.gz
                 rm gcc-64.tar.gz
-            elif [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.tar.xz' ]]; then
-                wget -nv -O gcc-64.xz ${{ env.CUSTOM_GCC_64_SOURCE }}
+            elif [[ ${{ env.GCC_64_SOURCE }} == *'.tar.xz' ]]; then
+                wget -nv -O gcc-64.xz ${{ env.GCC_64_SOURCE }}
                 mkdir gcc-64
                 tar -C gcc-64/ -Jxvf gcc-64.xz
                 rm gcc-64.tar.xz
-            elif [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.tar.zst' ]]; then
-                wget -nv -O gcc-64.tar.zst ${{ env.CUSTOM_GCC_64_SOURCE }}
+            elif [[ ${{ env.GCC_64_SOURCE }} == *'.tar.zst' ]]; then
+                wget -nv -O gcc-64.tar.zst ${{ env.GCC_64_SOURCE }}
                 mkdir gcc-64
                 tar -C gcc-64/ -I zstd -xf gcc-64.tar.zst
                 rm gcc-64.tar.zst
-            elif [[ ${{ env.CUSTOM_GCC_64_SOURCE }} == *'.git' ]]; then
-                git clone ${{ env.CUSTOM_GCC_64_SOURCE }} -b ${{ env.CUSTOM_GCC_64_BRANCH }} gcc-64 --depth=1
+            elif [[ ${{ env.GCC_64_SOURCE }} == *'.git' ]]; then
+                git clone ${{ env.GCC_64_SOURCE }} -b ${{ env.GCC_64_BRANCH }} gcc-64 --depth=1
             else
-                wget -nv -O gcc-64.zip ${{ env.CUSTOM_GCC_64_SOURCE }}
+                wget -nv -O gcc-64.zip ${{ env.GCC_64_SOURCE }}
                 mkdir gcc-64
                 unzip gcc-64.zip -d gcc-64/
                 rm gcc-64.zip
@@ -157,26 +128,26 @@ jobs:
                 mv -f "$(find ./gcc-64 -mindepth 1 -maxdepth 1 -type d)"/* ./gcc-64
             fi
         fi
-        if [ ${{ env.USE_CUSTOM_GCC_32 }} = true ]; then
-            if [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.tar.gz' ]]; then
-                wget -nv -O gcc-32.tar.gz ${{ env.CUSTOM_GCC_32_SOURCE }}
+        if [ ${{ env.USE_GCC_32 }} = true ]; then
+            if [[ ${{ env.GCC_32_SOURCE }} == *'.tar.gz' ]]; then
+                wget -nv -O gcc-32.tar.gz ${{ env.GCC_32_SOURCE }}
                 mkdir gcc-32
                 tar -C gcc-32/ -zxvf gcc-32.tar.gz
                 rm gcc-32.tar.gz
-            elif [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.tar.xz' ]]; then
-                wget -nv -O gcc-32.xz ${{ env.CUSTOM_GCC_32_SOURCE }}
+            elif [[ ${{ env.GCC_32_SOURCE }} == *'.tar.xz' ]]; then
+                wget -nv -O gcc-32.xz ${{ env.GCC_32_SOURCE }}
                 mkdir gcc-32
                 tar -C gcc-32/ -Jxvf gcc-32.xz
                 rm gcc-32.tar.xz
-            elif [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.tar.zst' ]]; then
-                wget -nv -O gcc-32.tar.zst ${{ env.CUSTOM_GCC_32_SOURCE }}
+            elif [[ ${{ env.GCC_32_SOURCE }} == *'.tar.zst' ]]; then
+                wget -nv -O gcc-32.tar.zst ${{ env.GCC_32_SOURCE }}
                 mkdir gcc-32
                 tar -C gcc-32/ -I zstd -xf gcc-32.tar.zst
                 rm gcc-32.tar.zst
-            elif [[ ${{ env.CUSTOM_GCC_32_SOURCE }} == *'.git' ]]; then
-                git clone ${{ env.CUSTOM_GCC_32_SOURCE }} -b ${{ env.CUSTOM_GCC_32_BRANCH }} gcc-32 --depth=1
+            elif [[ ${{ env.GCC_32_SOURCE }} == *'.git' ]]; then
+                git clone ${{ env.GCC_32_SOURCE }} -b ${{ env.GCC_32_BRANCH }} gcc-32 --depth=1
             else
-                wget -nv -O gcc-32.zip ${{ env.CUSTOM_GCC_32_SOURCE }}
+                wget -nv -O gcc-32.zip ${{ env.GCC_32_SOURCE }}
                 mkdir gcc-32
                 unzip gcc-32.zip -d gcc-32/
                 rm gcc-32.zip
@@ -196,11 +167,6 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
         git clone --recursive ${{ env.KERNEL_SOURCE }} -b ${{ env.KERNEL_SOURCE_BRANCH }} android-kernel --depth=1
-        if [[ ${{ env.ADD_LOCALVERSION_TO_FILENAME }} == 'true' ]]; then
-          echo "LOCALVERSION=$(cat android-kernel/localversion)" >> $GITHUB_ENV
-        else
-          echo "LOCALVERSION=" >> $GITHUB_ENV
-        fi
 
     - name: Download source boot image
       if: env.BUILD_BOOT_IMG == 'true'
@@ -223,7 +189,7 @@ jobs:
             git apply $GITHUB_WORKSPACE/patches/KSU_REVERT.patch
         fi
 
-    - name: Setup Configuration for Kernel
+    - name: Setup Configuration for kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
         if [ ${{ env.ENABLE_KERNELSU }} = true ]; then
@@ -303,15 +269,18 @@ jobs:
     - name: Build kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
-        if [ ${{ env.USE_CUSTOM_GCC }} = true ]; then
-            if [ ${{ env.USE_CUSTOM_GCC_64 }} = true ]; then
+        if [ ${{ env.USE_GCC }} = true ]; then
+            if [ ${{ env.USE_GCC_64 }} = true ]; then
                 export PATH=$GITHUB_WORKSPACE/kernel_workspace/gcc-64/bin:$PATH
             fi
-            if [ ${{ env.USE_CUSTOM_GCC_32 }} = true ]; then
+            if [ ${{ env.USE_GCC_32 }} = true ]; then
                 export PATH=$GITHUB_WORKSPACE/kernel_workspace/gcc-32/bin:$PATH
             fi
-        else
+        elif [ ${{ env.USE_CLANG }} = true ]; then
             export PATH=$GITHUB_WORKSPACE/kernel_workspace/clang/bin:$PATH
+        else
+            echo "Toolchain not selected"
+            exit 1
         fi
         export KBUILD_BUILD_HOST=Github-Action
         export KBUILD_BUILD_USER=$(echo ${{ github.actor }} | tr A-Z a-z)
@@ -321,13 +290,13 @@ jobs:
         fi
         make -j$(nproc --all) CC=clang O=out ARCH=${{ env.KERNEL_ARCH }} ${{ env.EXTRA_CMDS }} ${DEVICE}_defconfig
         if [ ${{ env.ENABLE_CCACHE }} = true ]; then
-            if [ ${{ env.USE_CUSTOM_GCC }} = true ]; then
+            if [ ${{ env.USE_GCC }} = true ]; then
                 make -j$(nproc --all) CC="ccache gcc" O=out ARCH=${{ env.KERNEL_ARCH }} ${{ env.EXTRA_CMDS }}
             else
                 make -j$(nproc --all) CC="ccache clang" O=out ARCH=${{ env.KERNEL_ARCH }} ${{ env.EXTRA_CMDS }}
             fi
         else
-            if [ ${{ env.USE_CUSTOM_GCC }} = true ]; then
+            if [ ${{ env.USE_GCC }} = true ]; then
                 make -j$(nproc --all) CC=gcc O=out ARCH=${{ env.KERNEL_ARCH }} ${{ env.EXTRA_CMDS }}
             else
                 make -j$(nproc --all) CC=clang O=out ARCH=${{ env.KERNEL_ARCH }} ${{ env.EXTRA_CMDS }}
@@ -352,43 +321,29 @@ jobs:
            fi
        fi
 
-    - name: Make Anykernel3
-      if: env.CHECK_FILE_IS_OK == 'true' && env.USE_CUSTOM_ANYKERNEL3 != 'true'
+    - name: Create flashable Anykernel3 zip
+      if: env.CHECK_FILE_IS_OK == 'true' && env.USE_ANYKERNEL3 == 'true'
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        git clone https://github.com/osm0sis/AnyKernel3 --depth=1 AnyKernel3
-        sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
-        sed -i 's!BLOCK=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!BLOCK=auto;!g' AnyKernel3/anykernel.sh
-        sed -i 's/IS_SLOT_DEVICE=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
-        cp android-kernel/out/arch/${{ env.KERNEL_ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }} AnyKernel3/
-        if [ ${{ env.CHECK_DTBO_IS_OK }} = true ]; then
-            cp android-kernel/out/arch/${{ env.KERNEL_ARCH }}/boot/dtbo.img AnyKernel3/
-        fi
-        rm -rf AnyKernel3/.git* AnyKernel3/README.md
-
-    - name: Make Custom-Anykernel3
-      if: env.CHECK_FILE_IS_OK == 'true' && env.USE_CUSTOM_ANYKERNEL3 == 'true'
-      run: |
-        cd $GITHUB_WORKSPACE/kernel_workspace
-        if [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.tar.gz' ]]; then
-            wget -nv -O AnyKernel3.tar.gz ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
+        if [[ ${{ env.ANYKERNEL3_SOURCE }} == *'.tar.gz' ]]; then
+            wget -nv -O AnyKernel3.tar.gz ${{ env.ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             tar -C AnyKernel3/ -zxvf AnyKernel3.tar.gz
             rm AnyKernel3.tar.gz
-        elif [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.tar.xz' ]]; then
-            wget -nv -O AnyKernel3.tar.xz ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
+        elif [[ ${{ env.ANYKERNEL3_SOURCE }} == *'.tar.xz' ]]; then
+            wget -nv -O AnyKernel3.tar.xz ${{ env.ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             tar -C AnyKernel3/ -Jxvf AnyKernel3.tar.xz
             rm AnyKernel3.tar.xz
-        elif [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.tar.zst' ]]; then
-            wget -nv -O AnyKernel3.tar.zst ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
+        elif [[ ${{ env.ANYKERNEL3_SOURCE }} == *'.tar.zst' ]]; then
+            wget -nv -O AnyKernel3.tar.zst ${{ env.ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             tar -C AnyKernel3/ -I zstd -xf clang.tar.zst
             rm AnyKernel3.tar.zst
-        elif [[ ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} == *'.git' ]]; then
-            git clone ${{ env.CUSTOM_ANYKERNEL3_SOURCE }} -b ${{ env.CUSTOM_ANYKERNEL3_BRANCH }} --depth=1 AnyKernel3
+        elif [[ ${{ env.ANYKERNEL3_SOURCE }} == *'.git' ]]; then
+            git clone ${{ env.ANYKERNEL3_SOURCE }} -b ${{ env.ANYKERNEL3_BRANCH }} --depth=1 AnyKernel3
         else
-            wget -nv -O AnyKernel3.zip ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
+            wget -nv -O AnyKernel3.zip ${{ env.ANYKERNEL3_SOURCE }}
             mkdir AnyKernel3
             unzip AnyKernel3.zip -d AnyKernel3/
             rm AnyKernel3.zip
@@ -420,7 +375,7 @@ jobs:
         name: AnyKernel3${{ env.LOCALVERSION }}${{ env.UPLOADNAME }}-${{ env.DEVICE }}-${{ env.BUILD_TIME }}
         path: kernel_workspace/AnyKernel3/*
 
-    - name: Upload ${{ env.KERNEL_IMAGE_NAME }}
+    - name: Upload kernel image
       if: env.CHECK_FILE_IS_OK == 'true'
       uses: actions/upload-artifact@v4
       with:
